# StellarRoute

./: .gitignore  Cargo.toml  SKELETON_LOADING_TESTING.md
.github/workflows/: ci.yml  deploy-testnet.yml
.kiro/specs/alternative-routes-panel/: .config.kiro  design.md  tasks.md
.kiro/specs/mobile-swap-experience/: design.md  tasks.md
.kiro/specs/routing-graph-model/: .config.kiro
crates/api/: Cargo.toml
crates/api/migrations/: 0001_route_computation_jobs.sql
crates/api/src/: error.rs  lib.rs  load_test.rs  state.rs
crates/api/src/cache/: mod.rs
crates/api/src/models/: request.rs
crates/api/src/regions/: config.rs  consistency.rs  health.rs  mod.rs  router.rs
crates/api/src/routes/: pairs.rs  quote.rs
crates/api/src/worker/: backpressure.rs  deduplication.rs  job.rs  mod.rs  pool.rs  queue.rs  retry.rs
crates/api/tests/: multi_region_test.rs
crates/contracts/src/: events.rs  router.rs  storage.rs  test.rs  types.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: amm.rs  lib.rs
crates/routing/: Cargo.toml
crates/routing/benches/: hybrid_optimizer_benchmarks.rs
crates/routing/src/: lib.rs  optimizer.rs  pathfinder.rs
crates/routing/tests/: hybrid_optimizer_tests.rs
docs/: hybrid_optimizer.md
docs/architecture/: MULTI_REGION_ARCHITECTURE.md  MULTI_REGION_RUNBOOK.md  RECONCILIATION.md  WORKER_POOL.md
examples/: hybrid_optimizer_demo.rs
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: DemoSwap.tsx  TransactionHistory.test.tsx  TransactionHistory.tsx
frontend/hooks/: useApi.ts
frontend/lib/: slippage.test.ts  slippage.ts
scripts/: extend-ttl.sh
sdk-js/: package-lock.json  package.json
sdk-js/src/: amm-low-reserves.test.ts  client.test.ts  client.ts  insufficient-liquidity.test.ts  thin-markets.test.ts  types.ts
(+106 files in other folders)
