[package]
name = "stellarroute-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "stellarroute-api"
path = "src/bin/stellarroute-api.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
redis.workspace = true

# Internal dependencies
stellarroute-indexer = { path = "../indexer" }
stellarroute-routing = { path = "../routing" }

# API documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Concurrency utilities
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
